package edu.hitsz.prop;

import edu.hitsz.aircraft.AbstractAircraft;
import edu.hitsz.animate.AnimateContainer;
import edu.hitsz.animate.AnimateContainerFactory;
import edu.hitsz.application.Main;
import edu.hitsz.application.MusicManager;
import edu.hitsz.basic.AbstractFlyingObject;
import edu.hitsz.utils.Utils;
import edu.hitsz.vector.Vec2;

import java.util.List;

/**
 * 道具类。
 * 也可以考虑不同类型的子弹
 *
 * @author hitsz
 */
abstract public class AbstractProp extends AbstractFlyingObject {

    public AbstractProp(Vec2 posInit, AnimateContainer animateContainer) {
        super(posInit, animateContainer);
    }

    protected void playSupplyMusic() {
        Utils.startMusic(MusicManager.MusicType.PROPS);
    }

    /**
     * 处理飞机碰到道具的时候的反应
     *
     * @param enemyAircrafts 所有的敌机
     */
    abstract public void handleAircrafts(List<AbstractAircraft> enemyAircrafts);
}
